# audio2text

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/audio2text/: cli.py  transcribe.py
tests/: test_transcribe.py
